sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.code
def insertionSort() {
 for (i<- 0 to getNombreValeurs()-1){
    var j=i-1
    var a = getValeur(i)
    while (j>(-1) && getValeur(j)>a){
      echange(j+1, j)
      j=j-1
      a=getValeur(j+1)
}